--- a/src/partials/about.html
+++ b/src/partials/about.html
@@ -2,19 +2,46 @@
   <div class="about-conteiner">
     <p class="about-label">tradition and love</p>
     <h3 class="about-title">how it’s made?</h3>
-    <p class="about-products">Fusce ut velit laoreet, tempus arcu eu, molestie tortor. Nam vel justo cursus, faucibus lorem eget, egestas eros.
-    Maecenas eleifend erat at justo fringilla.</p>
-    <p class="about-description">Curabitur lacinia enim at ex blandit, vel pellentesque odio elementum. Mauris rhoncus orci in imperdiet placerat.
-    Vestibulum euismod nisl suscipit ligula volutpat, a feugiat urna maximus. Cras massa nibh, tincidunt.
-    </p>
-    <p class="about-description">
-    Aliquam erat volutpat. Aenean accumsan.
-    </p>
-    <button class="about-button">
-      <span class="about-button-text">Read more</span>
-      <svg class="about-button-arrow">
-        <use href="#"></use>
-      </svg>
-    </button>
+    <div class="conteiner-eco">
+      <p class="about-products">Fusce ut velit laoreet, tempus arcu eu, molestie tortor. Nam vel justo cursus, faucibus lorem
+        eget, egestas eros.
+        Maecenas eleifend erat at justo fringilla.</p>
+      <p class="about-description">Curabitur lacinia enim at ex blandit, vel pellentesque odio elementum. Mauris rhoncus orci
+        in imperdiet placerat.
+        Vestibulum euismod nisl suscipit ligula volutpat, a feugiat urna maximus. Cras massa nibh, tincidunt.
+      </p>
+      <p class="about-description">
+        Aliquam erat volutpat. Aenean accumsan.
+      </p>
+      <button class="about-button">
+        <span class="about-button-text">Read more</span>
+        <svg class="about-button-arrow">
+          <use href="#"></use>
+        </svg>
+      </button>
+    </div>
+    <ul class="facts-list">
+      <li class="facts-item">
+        <svg class="facts-icon">
+          <use href="#"></use>
+        </svg>
+        <p class="facts-value">721</p>
+        <p class="facts-description">Aliquam ac dui vel dui vulputate consectetur. Mauris massa.</p>
+      </li>
+      <li class="facts-item">
+        <svg class="facts-icon">
+          <use href="#"></use>
+        </svg>
+        <p class="facts-value">16kg</p>
+        <p class="facts-description">Aliquam ac dui vel dui vulputate consectetur. Mauris massa.</p>
+      </li>
+      <li class="facts-item">
+        <svg class="facts-icon">
+          <use href="#"></use>
+        </svg>
+        <p class="facts-value">84</p>
+        <p class="facts-description">Aliquam ac dui vel dui vulputate consectetur. Mauris massa.</p>
+      </li>
+    </ul>
   </div>
 </section>
