--- a/src/partials/hero-header.html
+++ b/src/partials/hero-header.html
@@ -9,7 +9,7 @@
         <p>Masha privet
             privet world
         </p>
-        <p>Test trello i pul request</p>
+        <p>Test trello i pul request. Ya tuplu</p>
     </div>
     
 </section>
