--- a/src/partials/section-slider.html
+++ b/src/partials/section-slider.html
@@ -1,4 +1,10 @@
 <section class="section-slider">
     <div class="container">
+        <div class="slider-comment">
+            <p class="">Nullam viverra consectetuer.
+                Quisque cursus et, porttitor risus. Aliquam sem.
+                In hendrerit nulla quam nunc, accumsan
+                congue. Lorem ipsum primis in nibh vel risus.</p>
+        </div>
     </div>
 </section>
