--- a/src/sass/layout/index/_section-slider.scss
+++ b/src/sass/layout/index/_section-slider.scss
@@ -20,7 +20,6 @@
 //   @include for-size(tablet) {
 //     width: 768px;
 //   }
-  
 
 // // для диапазона 768-1199рх
 // @include to-size(tablet, max-tablet) {
@@ -31,3 +30,14 @@
 //     width: 1200px;
 //   }
 // }
+
+// .section-slider {
+
+// }
+.slider-comment {
+  width: 280px;
+  height: 308px;
+  background-color: getColor('lightGrey-bg');
+  padding-left: 50px;
+  padding-right: 50px;
+}
