--- a/src/sass/salespoints.scss
+++ b/src/sass/salespoints.scss
@@ -1,18 +1,32 @@
-.example {
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen,
-    Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
-  line-height: 1.5;
-  color: #212121;
-  max-width: 960px;
-  padding: 15px;
+.salespoints {
 }
 
-.example code {
-  font-family: monospace;
-  font-size: 16px;
-  font-weight: 700;
-  background-color: teal;
-  color: white;
-  padding: 2px 6px;
-  border-radius: 2px;
+.salespoints__list {
+  margin: 0;
+  padding: 0;
+}
+.salespoints__item {
+  padding: 43px 20px;
+  background: #ffffff;
+  box-shadow: 0px 8px 30px rgba(212, 20, 67, 0.1);
+  border-radius: 24px;
+  width: 220px;
+  height: 427px;
+  margin-left: auto;
+  margin-right: auto;
+  list-style: none;
+}
+
+.points-cafe {
+  width: 80px;
+  height: 16px;
+  background: #f0d1a5;
+  border-radius: 4px;
+}
+
+.points-foodtrack {
+  width: 130px;
+  height: 16px;
+  background: #c2e297;
+  border-radius: 4px;
 }
