Добавляет контакты и форму

--- a/src/partials/footer-contacts.html
+++ b/src/partials/footer-contacts.html
@@ -1,35 +1,44 @@
-<div class="right-side-footer-container section">
-  <section class="footer-appointment">
+<div class="contacts-container">
+  <section class="right-booking-section section">
     <div class="container">
-      <h2 class="title footer-title">Онлайн-запись</h2>
-      <form action="" class="appointmet-form">
-        <input
-          type="text"
-          name="user-name"
-          class="form-input"
-          placeholder="Имя*"
-        />
-
-        <input
-          type="tel"
-          name="user-phone"
-          class="form-input"
-          placeholder="Телефон*"
-        />
-
-        <textarea name="user-message" placeholder="Сообщение"></textarea>
+      <h2 class="title contacts-title">Онлайн-запись</h2>
+      <form action="" class="booking-form">
+        <div class="booking-form-container">
+          <input
+            type="text"
+            name="user-name"
+            class="form-input"
+            placeholder="Имя*"
+            required
+          />
+          <input
+            type="tel"
+            name="user-phone"
+            class="form-input"
+            placeholder="Телефон*"
+            required
+          />
+        </div>
+        <textarea
+          name="user-message"
+          placeholder="Сообщение"
+          rows="4"
+          class="form-input textarea-form"
+        ></textarea>
         <button type="submit" class="btn send-btn">Отправить</button>
       </form>
     </div>
   </section>
-</div>
-<div class="left-side-footer-container section">
-  <section class="footer-contacts">
+
+  <section class="left-contacts-section section">
     <div class="container">
-      <h2 class="title footer-title">Контакты</h2>
+      <h2 class="title contacts-title">Контакты</h2>
       <adress class="adress-container">
         <ul class="adress-container-list list">
           <li class="adress-container-item">
+            <svg class="adress-icon" width="16px" height="18px">
+              <use href="./img/sprite.svg#map"></use>
+            </svg>
             <a
               href="https://goo.gl/maps/UbY8nMhtFYvSiZbK6"
               class="adress-container-link link"
@@ -37,12 +46,15 @@
             >
           </li>
           <li class="adress-container-item">
+            <svg class="adress-icon" width="16px" height="16px">
+              <use href="./img/sprite.svg#phone"></use>
+            </svg>
             <a href="tel:+380441111111" class="adress-container-link link"
               >+38 044 111 11 11</a
             >
           </li>
           <li class="adress-container-item mail-item">
-            <svg class="adress-mail-icon">
+            <svg class="adress-icon" width="18px" height="14px">
               <use href="./img/sprite.svg#mail"></use>
             </svg>
             <a href="mailto:barbershop@email.com" class="adress-container-link"
