--- a/src/sass/main.scss
+++ b/src/sass/main.scss
@@ -6,5 +6,13 @@
 // Стили для файла с примером HTML-фрагмента
 
 @import './example';
-@import './page-header';
-@import './salespoints';
+@import './variables';
+@import './header';
+@import './hero';
+@import './products';
+@import './about';
+@import './advantages';
+@import './gallery';
+@import './customer-reviews';
+@import './contacts';
+@import './footer';
