--- a/src/sass/_contacts.scss
+++ b/src/sass/_contacts.scss
@@ -1,11 +1,11 @@
-.salespoints {
+.contacts {
 }
 
-.salespoints__list {
+.contacts__list {
   margin: 0;
   padding: 0;
 }
-.salespoints__item {
+.contacts__item {
   padding: 43px 20px;
   background: #ffffff;
   box-shadow: 0px 8px 30px rgba(212, 20, 67, 0.1);
@@ -17,14 +17,14 @@
   list-style: none;
 }
 
-.points-cafe {
+.contacts-cafe {
   width: 80px;
   height: 16px;
   background: #f0d1a5;
   border-radius: 4px;
 }
 
-.points-foodtrack {
+.contacts-foodtrack {
   width: 130px;
   height: 16px;
   background: #c2e297;
