--- a/src/sass/components/_modal.scss
+++ b/src/sass/components/_modal.scss
@@ -2,10 +2,25 @@
   position: absolute;
   top: 50%;
   left: 50%;
-  height: 500px;
-  width: 300px;
-  transform: translate(-50%, -50%);
-  background-color: rgba(255, 255, 255, 0.9);
+  width: 100%;
+  height: 95vh;
+  padding: 40px;
+  max-height: 610px;
+  max-width: 450px;
+  overflow-y: scroll;
+  transform: translate(-50%, -50%) scaleY(1);
+  transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  visibility: visible;
+  background-color: rgba(255, 255, 255, 0.5);
+
+  @media screen and (max-width: 1199px) {
+    height: 95vh;
+  }
+
+  @media screen and (min-width: 1200px) {
+    max-width: 528px;
+    max-height: 580px;
+  }
 }
 
 .modal-close-button {
@@ -22,8 +37,7 @@
   cursor: pointer;
   outline: none;
   border: 1px solid var(--accent-color);
-  //   border: none;
-  transition: background-color 250ms linear;
+  transition: background-color 2500ms linear;
   fill: var(--accent-color);
 
   &:hover .modal-close-button-icon,
@@ -43,17 +57,161 @@
 
   transition: fill 250ms linear;
 }
+
 .modal-close-button:hover,
 .modal-close-button:hover {
   background-color: var(--accent-color);
 }
-
-.modal-close-button .modal-close-button-icon:hover,
-.modal-close-button .modal-close-button-icon:focus {
-  outline: none;
-  fill: #fff;
+.modal-contact-form {
+  display: flex;
+  flex-direction: column;
 }
 
-.section {
+.modal-contact-form__description {
+  font-weight: 700;
+  font-size: 20px;
+  line-height: 30px;
+  text-align: center;
+
+  color: var(--accent-color);
+}
+.modal-contact-form__feild {
+  color: #757575;
+  font-size: 12px;
+  line-height: 14px;
+  letter-spacing: 0.01em;
+
+  & + & {
+    margin-top: 10px;
+  }
+}
+.modal-contact-form__input {
+  display: block;
+  width: 100%;
+  height: 40px;
+  border: 1px solid rgba(33, 33, 33, 0.2);
+  box-sizing: border-box;
+  border-radius: 4px;
+  padding-left: 42px;
+
+  &:focus {
+    outline: none;
+    border-color: var(--accent-color);
+    box-sizing: border-box;
+    border-radius: 4px;
+  }
+
+  &:focus + .modal-contact-form__icon {
+    fill: var(--accent-color);
+  }
+}
+
+.modal-contact-form__wrapper {
+  display: block;
+  position: relative;
+  margin-top: 4px;
+}
+
+.modal-contact-form__icon {
   position: absolute;
+  top: 50%;
+  left: 10px;
+  transform: translateY(-50%);
+  width: 18px;
+  height: 18px;
+  // fill: var(--accent-color);
+
+  // color: #000;
+}
+
+.modal-contact-form__message {
+  width: 100%;
+  resize: none;
+  margin-top: 4px;
+  margin-bottom: 20px;
+  border-radius: 4px;
+  padding: 12px 16px;
+  border: 1px solid rgba(33, 33, 33, 0.2);
+
+  &::placeholder {
+    font-size: 14px;
+    color: var(--accent-color);
+    // color: rgba(117, 117, 117, 0.5);
+  }
+
+  &:focus {
+    outline: none;
+    border-color: var(--accent-color);
+    box-sizing: border-box;
+    border-radius: 4px;
+  }
+}
+.modal-contact-form-btn {
+  margin: 0 auto;
+  padding: 12px 20px;
+  border-radius: 25px;
+  min-width: 160px;
+  height: 40px;
+  font-weight: 600;
+  font-size: 12px;
+  line-height: 1.33;
+  letter-spacing: 0.09em;
+  text-transform: uppercase;
+  color: var(--accent-color);
+  text-align: center;
+  background-color: transparent;
+  border: 1px solid #ff6c00;
+  cursor: pointer;
+  outline: none;
+  &:hover,
+  &:focus {
+    background-color: var(--accent-color);
+    color: #fff;
+  }
+}
+
+.modal-contact-form__policy-label {
+  margin-bottom: 30px;
+  font-size: 12px;
+  line-height: 14px;
+  text-align: center;
+  color: #757575;
+}
+.modal-contact-form__policy-link {
+  color: var(--accent-color);
+}
+.modal-contact-form__policy-label::before {
+  display: inline-block;
+  content: '';
+  border: 1px solid #212121;
+  width: 16px;
+  height: 15px;
+  background-repeat: no-repeat;
+  background-position: center;
+  background-image: url(../images/vector.svg);
+  border-radius: 3px;
+  margin-right: 8px;
+  vertical-align: middle;
+}
+
+.modal-contact-form__policy-check:checked
+  + .modal-contact-form__policy-label::before {
+  background-color: var(--accent-color);
+  border-radius: 3px;
+  border: none;
+}
+
+@media screen and (min-width: 1200px) {
+  .modal {
+    overflow: hidden;
+    width: 528px;
+    height: 581px;
+  }
+  .modal-contact-form__policy-label {
+    font-size: 14px;
+    line-height: 24px;
+  }
+  .modal-contact-form__description {
+    line-height: 23px;
+  }
 }
