--- a/src/partials/modal.html
+++ b/src/partials/modal.html
@@ -1,5 +1,5 @@
 <section class="section">
-  <button data-modal-open>подписаться</button>
+  <button data-modal-open class="modal-open">подписаться</button>
 </section>
 
 <div data-modal class="backdrop is-hidden">
@@ -9,6 +9,95 @@
         <use href="./images/sprite.svg#icon-close"></use>
       </svg>
     </button>
+
+    <form
+      class="modal-contact-form"
+      name="signup_form"
+      autocomplete="on"
+      novalidate
+    >
+      <p class="modal-contact-form__description">
+        Оставьте свои данные, мы вам перезвоним
+      </p>
+
+      <label class="modal-contact-form__feild" for="name">
+        Имя
+        <span class="modal-contact-form__wrapper">
+          <input
+            class="modal-contact-form__input"
+            type="text"
+            name="user-name"
+            id="name"
+            required
+            minlength="2"
+          />
+          <svg class="modal-contact-form__icon">
+            <use href="./images/sprite.svg#icon-person"></use>
+          </svg>
+        </span>
+      </label>
+
+      <label class="modal-contact-form__feild" for="tel">
+        Телефон
+        <span class="modal-contact-form__wrapper">
+          <input
+            class="modal-contact-form__input"
+            type="tel"
+            name="user-phone"
+            id="tel"
+            required
+          />
+          <svg class="modal-contact-form__icon">
+            <use href="./images/sprite.svg#icon-phone1"></use>
+          </svg>
+        </span>
+      </label>
+
+      <label class="modal-contact-form__feild" for="mail">
+        Почта
+        <span class="modal-contact-form__wrapper">
+          <input
+            class="modal-contact-form__input"
+            type="email"
+            name="user-mail"
+            id="mail"
+            required
+          />
+          <svg class="modal-contact-form__icon">
+            <use href="./images/sprite.svg#icon-email"></use>
+          </svg>
+        </span>
+      </label>
+
+      <label class="modal-contact-form__feild" for="textarea">
+        Комментарий
+        <textarea
+          cols="30"
+          rows="10"
+          class="modal-contact-form__message"
+          placeholder="Благодарим Алексея и Юлю"
+        ></textarea>
+      </label>
+
+      <input
+        class="modal-contact-form__policy-check visually-hidden"
+        type="checkbox"
+        name="user-policy"
+        id="user-policy"
+      />
+      <label for="user-policy" class="modal-contact-form__policy-label"
+        >Соглашаюсь с рассылкой и принимаю<a
+          class="modal-contact-form__policy-link"
+          href="#"
+        >
+          Условия договора</a
+        >
+      </label>
+
+      <button class="modal-contact-form-btn modal-all__button" type="submit">
+        Отправить
+      </button>
+    </form>
   </div>
 
   <script src="./js/modal.js"></script>
