исправил фонт на боди и контейнер десктопа

--- a/src/sass/components/_base.scss
+++ b/src/sass/components/_base.scss
@@ -22,7 +22,7 @@ p {
 body {
   margin: 0;
   padding: 0;
-  font-family: $main-font, sans-serif;
+  font-family: 'DM Sans', sans-serif;
   font-style: normal;
 }
 
