update.container width

--- a/src/sass/_base.scss
+++ b/src/sass/_base.scss
@@ -51,6 +51,7 @@ textarea {
 .container {
   margin: 0 auto;
   padding: 0 20px;
+  width: 100%;
 
   @media screen and (min-width: 480px) {
     width: 280px;
