--- a/src/sass/layout/_header.scss
+++ b/src/sass/layout/_header.scss
@@ -6,104 +6,94 @@
     }
 
     .header {
-    padding-top: 40px;
-    background: rgba(25, 28, 38, 0.2);
+        padding-top: 40px;
     }
 
     @media screen and (max-width:767px) {
-    .modal-first-button{
-    display: none;
+        .modal-first-button{
+        display: none;
+        }
+
+        .navigation-list {
+        display: none;
+        }
+        .contact-link {
+        display: none;
+        }
     }
 
-    .navigation-list {
-    display: none;
-    }
-    .contact-link {
-    display: none;
-    }
-    }
-
-@media screen and (min-width:768px) {
-    .header {
+    @media screen and (min-width:768px) {
+        .header  {
         padding-top: 32px;
+        }
+        .header-flex {
+        display: flex;
+        align-items: center;
+        }
+        .logo {
+        fill: var(--white-title-color);
+        }
+        .burger-btn  {
+        display: none;
+        }
+        .navigation-site {
+         display: flex;
+         align-items: center;
+        }
+        .navigation-list {
+            display: flex;  
+            align-items:center;
+        }
+        .navigation-list-item:not(:last-child) {
+            margin-right: 24px;
+        }
+        .navigation-link {
+            font-weight: 600;
+            font-size: 12px;
+            line-height: 1.33;
+            letter-spacing: 0.1em;
+            color: var(--dark-title-color);
+            text-decoration: none;
+        }
+        .link-about {
+            color: var(--accent-color);
+        }
+        .navigation-link:focus .link-about {
+            cursor: pointer;
+        }
+        .position-tablet {
+            display: flex;
+            margin-left: 47px;
+            flex-direction: column-reverse;
+        }
+        .contact-link {
+            font-size: 12px;
+            line-height: 1.33;
+            text-align: center;
+            letter-spacing: 0.1em;
+            text-transform: uppercase;
+            color: var(--dark-title-color);
+            margin-top: 20px;
+        }
+
     }
-    .header-flex {
+
+@media screen and (min-width:1200px) {
+    .position-tablet {
+        margin-left: 0;
+        flex-direction:row;
+        align-items: baseline;
+        
+    }
+    .navigation-site {
+        margin-right: auto;
         display: flex;
         align-items: center;
     }
-    .position-desktop {
-        display: flex;
-        justify-content: space-between;
-        align-items:center; 
-    
-    }
-   
-    .position-tablet {
-        display: flex;
-        flex-direction: column-reverse;
-        margin-left: 47px;
-    }
-    // .logo {
-    //     display: none;
-    // }
-    .logo {
-        fill: var(--white-title-color);
-    }
-    .burger-btn  {
-        display: none;
-    }
     .navigation-list {
-        display: flex;
-        list-style: none; 
-    }
-    
-    .navigation-list-item:not(:last-child) {
-        margin-right: 24px;
-    }
-    .navigation-link {
-        font-weight: 600;
-        font-size: 12px;
-        line-height: 1.33;
-        letter-spacing: 0.1em;
-        color: var(--dark-title-color);
-        text-decoration: none;
-    }
-    .link-about {
-        color: var(--accent-color);
-    }
-    .navigation-link:focus .link-about {
-        cursor: pointer;
+        align-items: center;
     }
 
-    .contact-link {
-        font-weight: 600;
-        font-size: 12px;
-        line-height: 1.33;
-        letter-spacing: 0.1em;
-        text-transform: uppercase;
-        color: var(--dark-title-color);
-        text-align: center;
-    }
-    .modal-button {
-        margin-bottom: 20px;
-    }
-    .position-mobile-menu {
-        display: inline-block;
-        margin-right: 64px;
-    }
-}
-
-@media screen and (min-width:1200px) {
-   
-    .container {
-        padding-top: 0;
-        padding-bottom: 0;
-        }
-    .position-tablet {
-        align-items:center;
-        flex-direction: row;
-    }
-    
     .navigation-list-item:not(:last-child) {
         margin-right: 40px;
     }
@@ -111,16 +101,9 @@
     .contact-link {
         margin-right: 40px; 
     }
-    .modal-button {
-        margin-top: 0;
+    .modal-first-button {
         margin-bottom: 0;
     }
-    .position-mobile-menu {
-        margin-right: 70px;
-    }
-    
-    .position-desktop {
-        justify-content: space-between;
-    }
-
 }
+
+
