--- a/src/partials/header.html
+++ b/src/partials/header.html
@@ -42,7 +42,7 @@
         </button>
       </div>
 
-    <div class="mobile-menu .is-menu-hidden" data-menu>
+    <div class="mobile-menu is-menu-hidden" data-menu>
       <button type="button" class="btn-close">
         <svg width="40" height="40" class="icon-close" data-menu-close>
           <use href="./images/sprite.svg#icon-close"></use>
