--- a/src/sass/utils/_variables.scss
+++ b/src/sass/utils/_variables.scss
@@ -8,7 +8,7 @@ $bg-second-color: #F0D1A5;
 $bg-third-color: #C2E297;
 $grey-color: #E1E1E1;
 $second-grey: #D9D9D9;
-$pink-text-color: FFA5BA;
+$pink-text-color: #FFA5BA;
 $icon-color: #FEA5BB;
 $color: #D31342;
 $hex-color: #C7133E;
