--- a/src/partials/header.html
+++ b/src/partials/header.html
@@ -1,14 +1,3 @@
-<section>
-    <ul>
-        <li>Masha</li>
-        <p>Принимай давай</p>
-        <li>Roma</li>
-        
-    </ul>
-    <div>
-        <p>Masha privet
-            privet world
-        </p>
-    </div>
-    
-</section>
+<header>
+    <p>test</p>
+</header>
