--- a/src/sass/main.scss
+++ b/src/sass/main.scss
@@ -5,3 +5,6 @@
 
 // Стили для файла с примером HTML-фрагмента
 @import './example';
+@import './base/defaults';
+@import './utils/variables';
+@import './components/container';
