--- a/src/sass/main.css
+++ b/src/sass/main.css
@@ -122,10 +122,28 @@ img {
   }
 }
 
+.hero-title {
+  color: white;
+  margin-right: 39px;
+  margin-bottom: 20px;
+  font-weight: bold;
+  line-height: 56px;
+  letter-spacing: 0.05em;
+  font-size: 48px;
+  font-family: 'Raleway';
+}
+
+@media screen and (min-width: 1200px) {
+  .hero-title {
+    font-size: 72px;
+    line-height: 85px;
+  }
+}
+
 .hero-text {
   padding-top: 208px;
   padding-left: 31px;
-  color: #9DA4BD;
+  color: #9da4bd;
 }
 
 @media screen and (min-width: 768px) {
@@ -142,28 +160,6 @@ img {
   }
 }
 
-.hero-text .hero-paragraph:first-child {
-  margin-bottom: 20px;
-}
-
-.hero-title {
-  color: white;
-  margin-right: 39px;
-  margin-bottom: 20px;
-  font-weight: bold;
-  line-height: 56px;
-  letter-spacing: 0.05em;
-  font-size: 48px;
-  font-family: "Raleway";
-}
-
-@media screen and (min-width: 1200px) {
-  .hero-title {
-    font-size: 72px;
-    line-height: 85px;
-  }
-}
-
 .hero-text .hero-paragraph::before {
   position: absolute;
   content: '';
@@ -172,6 +168,10 @@ img {
   width: 60px;
   height: 1px;
   background: rgba(157, 164, 189, 0.6);
+}
+
+.hero-text .hero-paragraph:first-child {
+  margin-bottom: 20px;
 }
 
 .hero-paragraph {
@@ -229,8 +229,7 @@ img {
   color: var(--white-title-color);
 }
 
-.social-hero:hover,
-.social-hero:focus {
+.social-hero:hover, .social-hero:focus {
   color: var(--accent-color);
 }
 
