--- a/src/sass/layout/_hero.scss
+++ b/src/sass/layout/_hero.scss
@@ -1,141 +1,141 @@
-.hero{
+.hero {
   background-image: url(../images/hero-img.jpg);
   background-repeat: no-repeat;
   width: 100%;
   height: 580px;
   background-size: cover;
   @media screen and(min-width:768px) {
-  background-image: url(../images/hero-table.jpg);
-  width: 100%;
-  height: 680px;
+    background-image: url(../images/hero-table.jpg);
+    width: 100%;
+    height: 680px;
   }
-  @media screen and(min-width:1200px){
-   background-image: url(../images/hero-desktop.jpg); 
-   width: 100%;
-   height: 680px;
+  @media screen and(min-width:1200px) {
+    background-image: url(../images/hero-desktop.jpg);
+    width: 100%;
+    height: 680px;
   }
 }
-.hero-text{
+.hero-title {
+  color: white;
+  margin-right: 39px;
+  margin-bottom: 20px;
+  font-weight: bold;
+  line-height: 56px;
+  letter-spacing: 0.05em;
+  font-size: 48px;
+  font-family: 'Raleway';
+  @media screen and (min-width: 1200px) {
+    font-size: 72px;
+    line-height: 85px;
+  }
+}
+.hero-text {
   padding-top: 208px;
   padding-left: 31px;
-  color:#9DA4BD;
-  @media screen and (min-width:768px) {
+  color: #9da4bd;
+  @media screen and (min-width: 768px) {
     padding-left: 120px;
     padding-top: 272px;
   }
-  @media screen and (min-width:1200px) {
+  @media screen and (min-width: 1200px) {
     padding-left: 100px;
     padding-top: 272px;
   }
+  & .hero-paragraph::before {
+    position: absolute;
+    content: '';
+    top: 50%;
+    left: 0%;
+    width: 60px;
+    height: 1px;
+    background: rgba(157, 164, 189, 0.6);
+  }
+  & .hero-paragraph:first-child {
+    margin-bottom: 20px;
+  }
 }
-.hero-text .hero-paragraph:first-child{
- margin-bottom: 20px;
-}
-.hero-title{
-  color: white;
-  margin-right: 39px;
- margin-bottom: 20px;
- font-weight: bold;
- line-height: 56px;
- letter-spacing: 0.05em;
- font-size: 48px;
- font-family: "Raleway";
- @media screen and (min-width:1200px) {
-   font-size: 72px;
-   line-height: 85px;
- }
-}
-.hero-text .hero-paragraph::before{
-  position: absolute;
-  content: '';
-  top: 50%;
-  left: 0%;
-  width: 60px;
-  height: 1px;
-  background: rgba(157, 164, 189, 0.6);
-}
-.hero-paragraph{
+.hero-paragraph {
   position: relative;
   padding-left: 111px;
 }
-.aside-links{
-  @media screen and (max-width:767px){
+.aside-links {
+  @media screen and (max-width: 767px) {
     display: none;
   }
-   @media screen and (min-width:768px){
-     position: relative;
-     display: flex;
-     align-items: center;
-     width: 159px;
-     justify-content: center;
+  @media screen and (min-width: 768px) {
+    position: relative;
+    display: flex;
+    align-items: center;
+    width: 159px;
+    justify-content: center;
   }
 }
-.hero-distribution{
-  @media screen and (min-width:768px){
-  display: flex;
+.hero-distribution {
+  @media screen and (min-width: 768px) {
+    display: flex;
   }
 }
-.list-social-hero{
+.list-social-hero {
   position: absolute;
   display: flex;
   transform: rotate(-90deg);
   padding-left: 60px;
   bottom: 176px;
 }
-.social-hero{
+.social-hero {
   margin-left: 40px;
   font-weight: 600;
-font-size: 11px;
-line-height: 1.364;
+  font-size: 11px;
+  line-height: 1.364;
 
-letter-spacing: 0.2em;
+  letter-spacing: 0.2em;
 
-color:var(--white-title-color);
+  color: var(--white-title-color);
+  &:hover,
+  &:focus {
+    color: var(--accent-color);
+  }
 }
-.social-hero:hover,
-.social-hero:focus{
-color:var(--accent-color);
-}
-.list-social-hero::before{
+.list-social-hero::before {
   position: absolute;
   bottom: 40%;
   left: 0%;
- content: '';
- width: 60px;
- height: 1px;
- background: #303030;
+  content: '';
+  width: 60px;
+  height: 1px;
+  background: #303030;
 }
-.text-hero-desc{
-    width: 306px;
-    font-weight: normal;
-    font-size: 16px;
-    line-height: 26px;
-    letter-spacing: 0.02em;
-    
-  @media screen and (min-width:768px) {
+.text-hero-desc {
+  width: 306px;
+  font-weight: normal;
+  font-size: 16px;
+  line-height: 26px;
+  letter-spacing: 0.02em;
+
+  @media screen and (min-width: 768px) {
     width: 355px;
   }
-   @media screen and (min-width:1200px) {
-  font-size: 18px;
-  line-height: 30px;
-  width: 486px;
+  @media screen and (min-width: 1200px) {
+    font-size: 18px;
+    line-height: 30px;
+    width: 486px;
   }
 }
-.btn-container{
+.btn-container {
   display: none;
-  @media screen and (min-width:768px) {
+  @media screen and (min-width: 768px) {
     display: block;
-   margin-top: 181px;
-  margin-left: 304px; 
+    margin-top: 181px;
+    margin-left: 304px;
   }
-  @media screen and (min-width:1200px) {
+  @media screen and (min-width: 1200px) {
     display: flex;
-   margin-top: 142px;
-  margin-left: 824px; 
-  margin-right: 49px;
+    margin-top: 142px;
+    margin-left: 824px;
+    margin-right: 49px;
   }
 }
-.btn-container button{
+.btn-container button {
   font-weight: 600;
   font-size: 11px;
   line-height: 1.364;
@@ -148,21 +148,21 @@ color:var(--accent-color);
   border-right: none;
   background-color: transparent;
   color: rgba(157, 164, 189, 0.6);
-  border-color:rgba(157, 164, 189, 0.6);
+  border-color: rgba(157, 164, 189, 0.6);
   outline: none;
 }
 .btn-container button:hover,
-.btn-container button:focus{
+.btn-container button:focus {
   color: white;
-  border-color:white;
+  border-color: white;
 }
-.btn-container button:first-child{
+.btn-container button:first-child {
   padding-left: 0px;
   padding-right: 12px;
   margin-right: 26px;
   text-align: left;
 }
-.btn-container button:last-child{
+.btn-container button:last-child {
   padding-right: 0px;
   padding-left: 12px;
 }
