--- a/src/partials/hero.html
+++ b/src/partials/hero.html
@@ -1,40 +1,13 @@
-<<<<<<< Updated upstream:src/partials/page-header.html
-<div>
-    <h1>ice cream made with</h1>
-    <h2>Passion</h2>
-    <button class="products-btn"></button>
-    <button class="about-btn"></button>
-=======
 <header class="header-section">
->>>>>>> Stashed changes:src/partials/hero.html
     <div>
         <span>
       Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod
       tempor incididunt ut labore et
     </span>
         <div>
-<<<<<<< Updated upstream:src/partials/page-header.html
-            <a href=""></a>
-        </div>
-    </div>
-</div>
-<div class="ice-cream">
-
-</div>
-<div>
-    <div>
-        <p>16</p>
-        <span>cafes</span>
-    </div>
-    <div>
-        <p>25</p>
-        <span>food trucks</span>
-    </div>
-</div>
-=======
-            <!-- <picture class="header-pics">
+            <picture class="header-pics">
                 <img src="./images/desckslider-pic51.png" alt="кусшин молока">
-            </picture> -->
+            </picture>
             <span>
                 Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod
                 tempor incididunt ut labore et
@@ -45,12 +18,12 @@
         </div>
     </div>
     <div class="hero-png-box">
-        <!-- <picture class="hero-png-box__img">
-            <source srcset="./images/mobslider-pic71.png 1x" media="(max-width:767.9px)" />
-            <source srcset="./images/tabletslider-pic71.png 1x" media="(min-width:768px)" />
+        <picture class="hero-png-box__img">
+            <!-- <source srcset="./images/mobslider-pic71.png 1x" media="(max-width:767.9px)" />
+            <source srcset="./images/tabletslider-pic71.png 1x" media="(min-width:768px)" /> -->
             <source srcset="./images/desckslider-pic71.png 1x" media="(min-width:1200px)" />
             <img src="./images/desckslider-pic71.png" alt="мороженого захотелось">
-        </picture> -->
+        </picture>
     </div>
     <div>
         <div class="text-right">
@@ -62,9 +35,8 @@
             <span>food trucks</span>
         </div>
 
-        <!-- <picture class="header-pics">
+        <picture class="header-pics">
             <img src="./images/desckslider-pic41.png" alt="вкусное мороженое">
-        </picture> -->
+        </picture>
     </div>
 </header>
->>>>>>> Stashed changes:src/partials/hero.html
