Змінює шлях у main

--- a/src/sass/utils/_variables.scss
+++ b/src/sass/utils/_variables.scss
@@ -1,15 +1,15 @@
-$main-color: #FFB8CA;
-$accent-color: #D41443;
-$bg-color: #FFF5F6;
-$primary-text-color: #FFFFFF;
+$main-color: #ffb8ca;
+$accent-color: #d41443;
+$bg-color: #fff5f6;
+$primary-text-color: #ffffff;
 $dark-text-color: #000000;
-$text-color: #907E82;
-$bg-second-color: #F0D1A5;
-$bg-third-color: #C2E297;
-$grey-color: #E1E1E1;
-$second-grey: #D9D9D9;
-$pink-text-color: #FFA5BA;
-$icon-color: #FEA5BB;
-$color: #D31342;
-$hex-color: #C7133E;
-$modal-color: #E17992;
+$text-color: #907e82;
+$bg-second-color: #f0d1a5;
+$bg-third-color: #c2e297;
+$grey-color: #e1e1e1;
+$second-grey: #d9d9d9;
+$pink-text-color: #ffa5ba;
+$icon-color: #fea5bb;
+$color: #d31342;
+$hex-color: #c7133e;
+$modal-color: #e17992;
