--- a/src/sass/main.scss
+++ b/src/sass/main.scss
@@ -5,7 +5,7 @@
 
 // Стили для файла с примером HTML-фрагмента
 @import './example';
-@import './utils/';
-@import './base/';
-@import './layout/';
-@import './components/';
+@import './utils/main';
+@import './base/base';
+@import './layout/main';
+@import './components/main';
