Фиксит ховер плейсхолдера, import scss: slick-slider

--- a/src/partials/page-header.html
+++ b/src/partials/page-header.html
@@ -24,7 +24,7 @@
     <div class="header-bottom">
       <nav class="menu">
         <svg class="logo-icon" width="68" height="56">
-          <use href="./images/logo/sprite.svg#icon-logo"></use>
+          <use href="./img/sprite.svg#icon-logo"></use>
         </svg>
 
         <ul class="list-menu list">
@@ -44,7 +44,7 @@
 
         <button class="burger" data-menu-open>
           <svg class="icon-burger" width="40" height="40">
-            <use href="./images/logo/sprite.svg#icon-burger"></use>
+            <use href="./img/sprite.svg#icon-burger"></use>
           </svg>
         </button>
       </nav>
