--- a/src/sass/main.scss
+++ b/src/sass/main.scss
@@ -2,7 +2,8 @@
 @import './utils/variables';
 @import './utils/mixins';
 @import './utils/placeholders';
-@import './utils/_visual-hidden';
+@import './utils/visual-hidden';
+@import './utils/slick-slider';
 
 // BASE
 
