--- a/src/sass/base/_body.scss
+++ b/src/sass/base/_body.scss
@@ -1,5 +1,5 @@
 body {
-  font-family: DM Sans;
+  font-family: DM Sans, sans-serif;
   font-size: 16px;
   line-height: 1.82;
   letter-spacing: 0.04em;
