--- a/src/partials/header.html
+++ b/src/partials/header.html
@@ -1,3 +1,31 @@
 <header>
-    <p>test</p>
+    <div class="container main-nav">
+        <a class="logo" href="#">
+            <img src="../images/logo/logo@1x-199.png" alt="logo">
+        </a>
+        <div class="menu-container" id="menu-container" data-menu>
+            <nav>
+                <ul class="menu">
+                    <li class="menu-item"><a href="#">Home</a></li>
+                    <li class="menu-item"><a href="#">About us</a></li>
+                    <li class="menu-item"><a href="#">How it’s made?</a></li>
+                    <li class="menu-item"><a href="#">Our products</a></li>
+                    <li class="menu-item"><a href="#">Contact</a></li>
+                </ul>
+            </nav>
+            <button 
+                type="button" 
+                class="burger-menu" 
+                aria-expanded="true" 
+                aria-controls="menu-container" 
+                data-menu-button>
+                <svg width="20px" height="20px" aria-label="Mobile menu switcher" class="menu-icon">
+                    <use class="icon-cross" href="./images/sprite.svg#icon-close"></use>
+                    <use class="icon-menu" href="./images/sprite.svg#icon-burger-menu"></use>
+                </svg>
+            </button>
+            <a data-modal-open class="button" href="#">Buy now</a>
+
+        </div>
+    </div>
 </header>
