добавляем разметку для скрипта

--- a/src/partials/modal-window.html
+++ b/src/partials/modal-window.html
@@ -6,13 +6,13 @@
             </svg>
         </button>
 
-        <form class="modal-form">
+        <form method="post" id="ajax_form" action="" class="modal-form">
             <p class="modal-window-title">
                 Оставьте свои данные, мы вам перезвоним
             </p>
             <label for="name" class="label">Имя</label>
             <div class="modal-form-item">
-                <input type="text" name="user-name" id="name" class="input">
+                <input type="text" name="name" id="name" class="input">
                 <svg class="modal-form-icon">
                     <use href="./img/sprite.svg#person"></use>
                 </svg>
@@ -20,29 +20,24 @@
 
             <label for="tel" class="label">Телефон</label>
             <div class="modal-form-item">
-                <input type="tel" name="tel" id="tel" class="input">
+                <input type="tel" name="phonenumber" id="tel" class="input">
                 <svg class="modal-form-icon">
                     <use href="./img/sprite.svg#phone-mw"></use>
                 </svg>
             </div>
 
-            <label for="mail" class="label">Почта</label>
-            <div class="modal-form-item">
-                <input type="email" name="email" id="mail" class="input">
-                <svg class="modal-form-icon">
-                    <use href="./img/sprite.svg#envelope"></use>
-                </svg>
-            </div>
 
-            <label for="text-area" class="label">Комментарий</label>
-            <textarea name="feedback" id="teat-area" class="feedback" placeholder="Введите текст"></textarea>
+            <label for="text-area" class="label">Сообщение</label>
+            <textarea name="message" id="teat-area" class="message" placeholder="Введите текст"></textarea>
 
             <input type="checkbox" name="policy" id="policy" class="policy-input visually-hidden">
             <label for="policy" class="policy-label">Соглашаюсь с рассылкой и принимаю <a href=""
                     class="policy-link">Условия договора</a>
             </label>
 
-            <button type="submit" class="btn">Отправить</button>
+            <button type="submit" id="btn" class="btn">Отправить</button>
+
+            <div id="result_form"></div>
 
         </form>
 
