--- a/src/sass/components/_modal.scss
+++ b/src/sass/components/_modal.scss
@@ -29,7 +29,7 @@
   padding: 40px;
   max-width: 450px;
   width: 95vw;
-  max-height: 609px;
+  max-height: 560px;
   height: 95vh;
   overflow: scroll;
   background-color: var(--white-color);
@@ -39,7 +39,7 @@
 
   @media screen and (min-width: 1200px) {
     max-width: 528px;
-    min-height: 581px;
+    max-height: 540px;
   }
 }
 
@@ -110,7 +110,7 @@
   }
 }
 
-.feedback {
+.message {
   width: 100%;
   height: 120px;
   border: 1px solid rgba(33, 33, 33, 0.2);
@@ -187,4 +187,11 @@
   margin-right: auto;
   margin-top: 30px;
   width: 200px;
+}
+
+#result_form {
+  background-color: var(--white-color);
+  width: 300px;
+  height: 400px;
+  padding: 20px;
 }
