--- a/src/partials/example.html
+++ b/src/partials/example.html
@@ -29,4 +29,25 @@
       &lt;include src="./partials/имя-файла.html"&gt;&lt;/include&gt;
     </code>
   </p>
+<svg class="icon-burger"width="" height=""><use href="./images/sprite.svg#icon-burger"></use></svg>
+<svg class="icon-close" width="" height=""><use href="./images/sprite.svg#icon-close"></use></svg>
+<svg class="icon-ellipsis" width="" height=""><use href="./images/sprite.svg#icon-ellipsis"></use></svg>
+<svg class="icon-ellipsis-reviews" width="" height=""><use href="./images/sprite.svg#icon-ellipsis-reviews"></use></svg>
+
+<svg class="icon-home" width="" height=""><use href="./images/sprite.svg#icon-home"></use></svg>
+<svg class="icon-quotes" width="" height=""><use href="./images/sprite.svg#icon-quotes"></use></svg>
+
+<svg class="icon-vector" width="" height=""><use href="./images/sprite.svg#icon-vector"></use></svg>
+<svg class="icon-untitled" width="" height=""><use href="./images/sprite.svg#icon-untitled"></use></svg>
+<svg class="icon-group-36" width="" height=""><use href="./images/sprite.svg#icon-group-36"></use></svg>
+
+
+
+<svg class="icon-arrow-right" width="" height=""><use href="./images/sprite.svg#icon-arrow-right"></use></svg>
+<svg class="icon-arrow-right2" width="" height=""><use href="./images/sprite.svg#icon-arrow-right2"></use></svg>
+<svg class="icon-further" width="" height=""><use href="./images/sprite.svg#icon-further"></use></svg>
+
+<svg class="icon-facebook" width="" height=""><use href="/images/sprite.svg#icon-facebook"></use></svg>
+<svg class="icon-github" width="" height=""><use href="./images/sprite.svg#icon-github"></use></svg>
+<svg class="icon-telegram" width="" height=""><use href="./images/sprite.svg#icon-telegram"></use></svg>
 </article>
