Добавил базовые стили для лейбла и заголовка секций

--- a/src/sass/components/_reused.scss
+++ b/src/sass/components/_reused.scss
@@ -59,3 +59,35 @@
     background-color: #c7133e;
   }
 }
+
+.section-label {
+  font-family: 'Titan One';
+  @include font-shs(18px,1.17,unset);
+  text-align: center;
+  text-transform: uppercase;
+  color: #FFA5BA;
+
+  @media screen and (min-width: 768px) {
+      @include font-shs(26px,1.15,unset);
+  }
+
+  @media screen and (min-width: 1280px) {
+      @include font-shs(30px,1.13,0.04em);
+  }
+}
+
+.section-title {
+  font-family: 'Titan One';
+  @include font-shs(34px,1.15,0.04em);
+  text-align: center;
+  text-transform: uppercase;
+  color: #D41443;
+
+  @media screen and (min-width: 768px) {
+      @include font-shs(48px,1.14,unset);
+  }
+
+  @media screen and (min-width: 1280px) {
+      @include font-shs(58px,1.14,0.06em);
+  }
+}
