Some links added

--- a/src/partials/header.html
+++ b/src/partials/header.html
@@ -1,16 +1,16 @@
 <header>
     <div class="container main-nav">
-        <a class="logo" href="#">
+        <a class="logo" name="logo" href="#">
             <img src="../images/logo/logo@1x-199.png" alt="logo">
         </a>
         <div class="menu-container" id="menu-container" data-menu>
             <nav>
                 <ul class="menu">
-                    <li class="menu-item"><a href="#">Home</a></li>
-                    <li class="menu-item"><a href="#">About us</a></li>
-                    <li class="menu-item"><a href="#">How it’s made?</a></li>
-                    <li class="menu-item"><a href="#">Our products</a></li>
-                    <li class="menu-item"><a href="#">Contact</a></li>
+                    <li class="menu-item"><a href="#logo">Home</a></li>
+                    <li class="menu-item"><a href="#about">About us</a></li>
+                    <li class="menu-item"><a href="#how_made">How it’s made?</a></li>
+                    <li class="menu-item"><a href="#products">Our products</a></li>
+                    <li class="menu-item"><a href="#contacts">Contact</a></li>
                 </ul>
             </nav>
             <button 
@@ -25,7 +25,6 @@
                 </svg>
             </button>
             <a data-modal-open class="button" href="#">Buy now</a>
-
         </div>
     </div>
 </header>
