Добавлен скрипт на модалку php

--- a/src/sass/layout/_footer-contacts.scss
+++ b/src/sass/layout/_footer-contacts.scss
@@ -1,10 +1,14 @@
 .contacts-container {
-  @media screen and (min-width: 768px) {
+  @media screen and (min-width: 1200px) {
+    display: flex;
+    max-width: 100%;
   }
 }
 
 .right-booking-section {
   background-color: #191c26;
+  display: flex;
+  justify-content: flex-end;
 }
 
 .left-contacts-section {
@@ -52,6 +56,10 @@
 }
 
 // BOOKING FORM
+
+.booking-form {
+  max-width: 278px;
+}
 
 .form-input {
   width: 100%;
