--- a/src/sass/layout/_footer.scss
+++ b/src/sass/layout/_footer.scss
@@ -1,8 +1,12 @@
 ////       CONTACT FORM       ///////
-
+.contact-wrapper {
+  background-color: #191c26;
+}
 .contact-form {
   padding-top: 84px;
   padding-bottom: 84px;
+  padding-left: 31px;
+  padding-right: 31px;
   background-color: #191c26;
 }
 .form-field {
@@ -95,6 +99,8 @@
 .contact-info {
   padding-top: 84px;
   padding-bottom: 84px;
+  padding-left: 35px;
+  padding-right: 31px;
   background-color: #191c26;
   background-image: url('../images/contacts/contacts-bg.png');
   background-size: cover;
@@ -187,10 +193,13 @@
   .contact-form {
     padding-top: 100px;
     padding-bottom: 100px;
+    padding-left: 39px;
+    padding-right: 39px;
   }
   .contact-info {
     padding-top: 100px;
     padding-bottom: 100px;
+    padding-left: 39px;
   }
 
   .contact-info-title {
@@ -241,6 +250,11 @@
     width: 50%;
   }
 
+  .form-field {
+    width: 560px;
+    padding-left: 15px;
+  }
+
   .contacts-input + .contacts-input {
     margin-right: 30px;
   }
@@ -265,7 +279,9 @@
     margin-top: 44px;
   }
   .contact-form {
-    padding-left: 56px;
+    display: flex;
+    justify-content: flex-end;
+    padding-right: 40px;
   }
 
   .contact-list-icon-map-pin {
