--- a/src/partials/contacts.html
+++ b/src/partials/contacts.html
@@ -1,5 +1,5 @@
-<div class="contact-wrapper" id="contacts">
-  <section class="container contact-form">
+<div class="contact-wrapper">
+  <section class="contact-form">
     <form action="#" class="form-field">
       <h2 class="contact-form-title title">Онлайн-запись</h2>
       <div class="contact-input-wrapper">
@@ -47,7 +47,7 @@
     </form>
   </section>
 
-  <section class="container contact-info">
+  <section class="contact-info" id="contacts">
     <h2 class="contact-info-title title">Контакты</h2>
     <div class="container-contact-info">
       <div class="contact-info-addres-wraper">
