--- a/src/partials/contacts.html
+++ b/src/partials/contacts.html
@@ -2,18 +2,30 @@
   <ul class="contacts__list">
     <li class="contacts__item">
       <div class="contacts-cafe">
-        <p>CAFE</p>
+        <p class="contacts__name">CAFE</p>
       </div>
+      <h2 class="contacts__city">Chicago</h2>
+      <p class="contact__text">
+        Fusce ut velit laoreet, tempus arcu molestie vulputate
+      </p>
     </li>
     <li class="contacts__item">
       <div class="contacts-foodtrack">
-        <p>FOODTRUCK</p>
+        <p class="contacts__name">FOODTRUCK</p>
       </div>
+      <h1 class="contacts__city">Los Angeles</h1>
+      <p class="contact__text">
+        Fusce ut velit laoreet, tempus arcu molestie vulputate
+      </p>
     </li>
     <li class="contacts__item">
       <div class="contacts-cafe">
-        <p>CAFE</p>
+        <p class="contacts__name">CAFE</p>
       </div>
+      <h1 class="contacts__city">New York</h1>
+      <p class="contact__text">
+        Fusce ut velit laoreet, tempus arcu molestie vulputate
+      </p>
     </li>
   </ul>
 </section>
