--- a/src/sass/base/_base.scss
+++ b/src/sass/base/_base.scss
@@ -1,5 +1,5 @@
 @import './normalize';
-@import './fonts';
+// @import './fonts';
 @import './body';
 @import './container';
 @import './visually-hidden';
