--- a/src/sass/base/_body.scss
+++ b/src/sass/base/_body.scss
@@ -12,3 +12,13 @@ img {
   max-width: 100%;
   height: auto;
 }
+
+ul {
+  list-style: none;
+  padding: 0;
+  margin: 0;
+}
+
+a {
+  text-decoration: none;
+}
