--- a/src/sass/main.scss
+++ b/src/sass/main.scss
@@ -3,6 +3,7 @@
 @import './utils/mixins';
 @import './utils/placeholders';
 @import './utils/_visual-hidden';
+@import './utils/slick-slider';
 
 // BASE
 
