Добавлен класс на лого для анимации

--- a/src/partials/page-header.html
+++ b/src/partials/page-header.html
@@ -23,7 +23,11 @@
 
     <div class="header-bottom">
       <nav class="menu">
-        <svg class="logo-icon animate__flip" width="68" height="56">
+        <svg
+          class="logo-icon animate__flip animate__animated"
+          width="68"
+          height="56"
+        >
           <use href="./img/sprite.svg#icon-logo"></use>
         </svg>
 
