исправляет ошибки в HTML разметке секции about

--- a/src/partials/about.html
+++ b/src/partials/about.html
@@ -3,7 +3,8 @@
     <h2 class="about tittle">how it’s made?</h2>
     <ul class="about list">
         <li class="about item">
-            <a href=""><img src="../images/about-cow.png" width="516" alt="Корова с молоком"></a></li>
+            <a href=""><img src="./images/about-cow.png" width="516" alt="Корова с молоком"></a>
+        </li>
         <li class="about item">
             <h3>Fusce ut velit laoreet, tempus arcu eu, molestie tortor. Nam vel justo cursus, faucibus lorem eget, egestas eros. Maecenas eleifend erat at justo fringilla.</h3>
             <p>Curabitur lacinia enim at ex blandit, vel pellentesque odio elementum. Mauris rhoncus orci in imperdiet placerat. Vestibulum euismod nisl suscipit ligula volutpat, a feugiat urna maximus. Cras massa nibh, tincidunt.</p>
