--- a/src/sass/components/_modal.scss
+++ b/src/sass/components/_modal.scss
@@ -6,9 +6,7 @@
   width: 100%;
   height: 100%;
   background-color: rgba(0, 0, 0, 0.2);
-  transform: scale(1);
   transition: opacity 250ms cubic-bezier(0.4, 0, 0.2, 1);
-  transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
   opacity: 1;
   pointer-events: auto;
   visibility: visible;
@@ -18,13 +16,17 @@
   opacity: 0;
   visibility: hidden;
   pointer-events: none;
+  transition: all 250ms cubic-bezier(0.4, 0, 0.2, 1) 250ms;
 }
-
+.backdrop.is-hidden .modal-window {
+  transform: translate(-50%, -50%) scale(0);
+  transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1) 0ms;
+}
 .modal-window {
   position: absolute;
   top: 50%;
   left: 50%;
-  transform: translate(-50%, -50%);
+  transform: translate(-50%, -50%) scale(1);
   margin: 0 auto;
   padding: 40px;
   max-width: 450px;
@@ -36,6 +38,7 @@
   box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14),
     0px 2px 1px rgba(0, 0, 0, 0.2);
   border-radius: 4px;
+  transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1) 250ms;
 
   @media screen and (min-width: 1200px) {
     max-width: 528px;
