поправив gallery scss

--- a/src/sass/main.scss
+++ b/src/sass/main.scss
@@ -22,7 +22,7 @@
 // Стилі для Advantages
 @import 'components/advantages';
 // Стилі для Gallery
-@import 'components/galery';
+@import 'components/gallery';
 // Стилі для Customer Reviews
 @import 'components/customers-reviews';
 // Стилі для Contacts
