внесены изменения, добавлен трансформ на меню

--- a/src/sass/layout/_header.scss
+++ b/src/sass/layout/_header.scss
@@ -54,12 +54,12 @@
             letter-spacing: 0.1em;
             color: var(--dark-title-color);
             text-decoration: none;
+
+            transition: color 250ms linear;
         }
-        .link-about {
+        
+        .navigation-link:focus {
             color: var(--accent-color);
-        }
-        .navigation-link:focus .link-about {
-            cursor: pointer;
         }
         .position-tablet {
             display: flex;
@@ -74,6 +74,11 @@
             text-transform: uppercase;
             color: var(--dark-title-color);
             margin-top: 20px;
+
+            transition: color 250ms linear;
+        }
+        .contact-link:focus {
+            color: var(--accent-color);
         }
 
     }
