--- a/src/partials/header.html
+++ b/src/partials/header.html
@@ -16,18 +16,18 @@
       <nav class="navigation-site">
         <ul class="navigation-list list">
           <li class="navigation-list-item">
-            <a href="#about" class="navigation-link link-about"> О нас </a>
+            <a href="#about" class="navigation-link scrollto"> О нас </a>
           </li>
           <li class="navigation-list-item">
-            <a href="#price" class="navigation-link"> Услуги и цены </a>
-          </li>
-
-          <li class="navigation-list-item">
-            <a href="#team" class="navigation-link"> Мастера </a>
+            <a href="#price" class="navigation-link scrollto"> Услуги и цены </a>
           </li>
 
           <li class="navigation-list-item">
-            <a href="#contacts" class="navigation-link"> Контакты </a>
+            <a href="#team" class="navigation-link scrollto"> Мастера </a>
+          </li>
+
+          <li class="navigation-list-item">
+            <a href="#contacts" class="navigation-link scrollto"> Контакты </a>
           </li>
         </ul>
       </nav>
@@ -51,16 +51,16 @@
 
       <ul class="mobile-list">
         <li class="mobile-list-item">
-          <a href="#about" class="mobile-nav-link link-currant">О нас </a>
+          <a href="#about" class="mobile-nav-link scrollto">О нас </a>
         </li>
         <li class="mobile-list-item">
-          <a href="#price" class="mobile-nav-link">Услуги и цены</a>
+          <a href="#price" class="mobile-nav-link scrollto">Услуги и цены</a>
         </li>
         <li class="mobile-list-item">
-          <a href="#team" class="mobile-nav-link">Мастера</a>
+          <a href="#team" class="mobile-nav-link  scrollto">Мастера</a>
         </li>
         <li class="mobile-list-item">
-          <a href="#contacts" class="mobile-nav-link">Контакты</a>
+          <a href="#contacts" class="mobile-nav-link  scrollto">Контакты</a>
         </li>
       </ul>
 
