done section modal

--- a/src/partials/modal.html
+++ b/src/partials/modal.html
@@ -26,7 +26,7 @@
           <input
             class="modal-contact-form__input"
             type="text"
-            name="user-name"
+            name="name"
             id="name"
             required
             minlength="2"
@@ -42,29 +42,13 @@
         <span class="modal-contact-form__wrapper">
           <input
             class="modal-contact-form__input"
-            type="tel"
-            name="user-phone"
+            type="text"
+            name="phonenumber"
             id="tel"
             required
           />
           <svg class="modal-contact-form__icon">
             <use href="./images/sprite.svg#icon-phone1"></use>
-          </svg>
-        </span>
-      </label>
-
-      <label class="modal-contact-form__feild" for="mail">
-        Почта
-        <span class="modal-contact-form__wrapper">
-          <input
-            class="modal-contact-form__input"
-            type="email"
-            name="user-mail"
-            id="mail"
-            required
-          />
-          <svg class="modal-contact-form__icon">
-            <use href="./images/sprite.svg#icon-email"></use>
           </svg>
         </span>
       </label>
@@ -75,7 +59,7 @@
           cols="30"
           rows="10"
           class="modal-contact-form__message"
-          placeholder="Благодарим Алексея и Юлю"
+          placeholder="Введите текст"
         ></textarea>
       </label>
 
@@ -94,11 +78,15 @@
         >
       </label>
 
-      <button class="modal-contact-form-btn modal-all__button" type="submit">
+      <button
+        class="modal-contact-form-btn modal-all__button"
+        id="btn"
+        type="button"
+      >
         Отправить
       </button>
     </form>
   </div>
-
-  <script src="./js/modal.js"></script>
 </div>
+
+<div id="result_form"></div>
