--- a/src/sass/components/_modal.scss
+++ b/src/sass/components/_modal.scss
@@ -11,7 +11,7 @@
   transform: translate(-50%, -50%) scaleY(1);
   transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
   visibility: visible;
-  background-color: rgba(255, 255, 255, 0.5);
+  background-color: rgba(255, 255, 255);
 
   @media screen and (max-width: 1199px) {
     height: 95vh;
@@ -72,6 +72,7 @@
   font-size: 20px;
   line-height: 30px;
   text-align: center;
+  margin-bottom: 12px;
 
   color: var(--accent-color);
 }
@@ -89,10 +90,12 @@
   display: block;
   width: 100%;
   height: 40px;
-  border: 1px solid rgba(33, 33, 33, 0.2);
+  border: none;
   box-sizing: border-box;
   border-radius: 4px;
   padding-left: 42px;
+  background-color: transparent;
+  border-bottom: 1px solid rgba(33, 33, 33);
 
   &:focus {
     outline: none;
@@ -119,9 +122,6 @@
   transform: translateY(-50%);
   width: 18px;
   height: 18px;
-  // fill: var(--accent-color);
-
-  // color: #000;
 }
 
 .modal-contact-form__message {
@@ -131,12 +131,13 @@
   margin-bottom: 20px;
   border-radius: 4px;
   padding: 12px 16px;
-  border: 1px solid rgba(33, 33, 33, 0.2);
+  background-color: transparent;
+  border: none;
+  border-bottom: 1px solid rgba(33, 33, 33);
 
   &::placeholder {
     font-size: 14px;
     color: var(--accent-color);
-    // color: rgba(117, 117, 117, 0.5);
   }
 
   &:focus {
@@ -177,13 +178,14 @@
   text-align: center;
   color: #757575;
 }
+
 .modal-contact-form__policy-link {
   color: var(--accent-color);
 }
 .modal-contact-form__policy-label::before {
   display: inline-block;
   content: '';
-  border: 1px solid #212121;
+  border: 1px solid #757575;
   width: 16px;
   height: 15px;
   background-repeat: no-repeat;
@@ -213,5 +215,30 @@
   }
   .modal-contact-form__description {
     line-height: 23px;
+  }
+}
+
+#result_form {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  width: 100%;
+  height: 95vh;
+  padding: 40px;
+  max-height: 610px;
+  max-width: 450px;
+  overflow-y: scroll;
+  transform: translate(-50%, -50%) scaleY(1);
+  transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  visibility: visible;
+  background-color: rgba(255, 255, 255);
+
+  @media screen and (max-width: 1199px) {
+    height: 95vh;
+  }
+
+  @media screen and (min-width: 1200px) {
+    max-width: 528px;
+    max-height: 580px;
   }
 }
