masters final-commit

--- a/src/sass/layout/_masters.scss
+++ b/src/sass/layout/_masters.scss
@@ -1,7 +1,15 @@
 .masters {
   &-section {
     background-color: #f7f7f7;
-    & .container {
+  }
+  &-container {
+    @media screen and(min-width:768px) {
+      width: 480px;
+      padding: 0 15px;
+      margin: 0 auto;
+    }
+    @media screen and(min-width:1200px) {
+      width: 1200px;
       margin: 0 auto;
     }
   }
@@ -20,19 +28,14 @@
     }
   }
   &-item {
-    flex-basis: calc((100% - 30px * 3) / 3);
     margin-top: 30px;
     width: 100%;
-    max-width: 418px;
-    @media screen and(min-width:480px) {
-      width: 100%;
-      max-width: 450px;
-    }
+
     @media screen and(min-width:1200px) {
+      flex-basis: calc((100% - 30px * 3) / 3);
       width: 100%;
       max-width: 370px;
       margin-left: 30px;
-      margin-top: 0;
     }
   }
   &-item-title {
