--- a/src/partials/masters.html
+++ b/src/partials/masters.html
@@ -1,5 +1,5 @@
 <section class="section masters-section">
-  <div class="container">
+  <div class="container masters-container">
     <p class="suptitle">для настоящих ценителей атмосферы</p>
     <h2 class="title masters-title">Наши мастера</h2>
     <ul class="list masters-list">
@@ -46,7 +46,7 @@
               ./img/masters/masters-mobile/masters-mobile-01.webp    1x,
               ./img/masters/masters-mobile/masters-mobile-01@2x.webp 2x
             "
-            media="(min-width: 480px)"
+            media="(min-width: 320px)"
             type="image/webp"
           />
           <source
@@ -54,12 +54,12 @@
               ./img/masters/masters-mobile/masters-mobile-01.jpg    1x,
               ./img/masters/masters-mobile/masters-mobile-01@2x.jpg 2x
             "
-            media="(min-width: 480px)"
+            media="(min-width: 320px)"
             type="image/webp"
           />
           <img
             src="./img/masters/masters-mobile/masters-mobile-01.jpg"
-            class="masters-img"
+            class="img"
           />
         </picture>
         <div class="masters-item-description">
@@ -142,7 +142,7 @@
               ./img/masters/masters-mobile/masters-mobile-02.webp    1x,
               ./img/masters/masters-mobile/masters-mobile-02@2x.webp 2x
             "
-            media="(min-width: 480px)"
+            media="(min-width: 320px)"
             type="image/webp"
           />
           <source
@@ -150,12 +150,12 @@
               ./img/masters/masters-mobile/masters-mobile-02.jpg    1x,
               ./img/masters/masters-mobile/masters-mobile-02@2x.jpg 2x
             "
-            media="(min-width: 480px)"
+            media="(min-width: 320px)"
             type="image/webp"
           />
           <img
             src="./img/masters/masters-mobile/masters-mobile-02.jpg"
-            class="masters-img"
+            class="img"
           />
         </picture>
         <div class="masters-item-description">
@@ -253,7 +253,7 @@
           />
           <img
             src="./img/masters/masters-mobile/masters-mobile-03.jpg"
-            class="masters-img"
+            class="img"
           />
         </picture>
         <div class="masters-item-description">
