--- a/src/partials/contacts.html
+++ b/src/partials/contacts.html
@@ -2,30 +2,18 @@
   <ul class="contacts__list">
     <li class="contacts__item">
       <div class="contacts-cafe">
-        <p class="contacts__name">CAFE</p>
+        <p>CAFE</p>
       </div>
-      <h2 class="contacts__city">Chicago</h2>
-      <p class="contact__text">
-        Fusce ut velit laoreet, tempus arcu molestie vulputate
-      </p>
     </li>
     <li class="contacts__item">
       <div class="contacts-foodtrack">
-        <p class="contacts__name">FOODTRUCK</p>
+        <p>FOODTRUCK</p>
       </div>
-      <h1 class="contacts__city">Los Angeles</h1>
-      <p class="contact__text">
-        Fusce ut velit laoreet, tempus arcu molestie vulputate
-      </p>
     </li>
     <li class="contacts__item">
       <div class="contacts-cafe">
-        <p class="contacts__name">CAFE</p>
+        <p>CAFE</p>
       </div>
-      <h1 class="contacts__city">New York</h1>
-      <p class="contact__text">
-        Fusce ut velit laoreet, tempus arcu molestie vulputate
-      </p>
     </li>
   </ul>
 </section>
