--- a/src/partials/about.html
+++ b/src/partials/about.html
@@ -99,7 +99,10 @@
         волне". Поэтому, мы всегда готовы усовершенствовать каждого, кто к нам
         приходит!
       </p>
-      <button class="about-button modal-button modal-button-white">
+      <button
+        data-modal-open
+        class="about-button modal-button modal-button-white modal-open"
+      >
         онлайн-запись
       </button>
     </div>
