--- a/src/partials/modal.html
+++ b/src/partials/modal.html
@@ -1,6 +1,6 @@
-<section class="section">
+<!-- <section class="section">
   <button data-modal-open class="modal-open">подписаться</button>
-</section>
+</section> -->
 
 <div data-modal class="backdrop is-hidden">
   <div class="modal">
@@ -89,4 +89,4 @@
   </div>
 </div>
 
-<div id="result_form"></div>
+<!-- <div id="result_form"></div > -->
