--- a/src/sass/components/_modal.scss
+++ b/src/sass/components/_modal.scss
@@ -87,6 +87,7 @@
   }
 }
 .modal-contact-form__input {
+  font-size: 14px;
   display: block;
   width: 100%;
   height: 40px;
@@ -125,6 +126,7 @@
 }
 
 .modal-contact-form__message {
+  font-size: 14px;
   width: 100%;
   resize: none;
   margin-top: 4px;
