add_fonts_to_base

--- a/src/sass/base/_base_styles.scss
+++ b/src/sass/base/_base_styles.scss
@@ -1,5 +1,6 @@
 body {
-    
+  font-family: 'DM Sans', 'Sans Serif';
+  font-style: normal;
     letter-spacing: 0.04em;
     font-weight: 500;
     margin: 0;
