--- a/src/sass/layout/_masters.scss
+++ b/src/sass/layout/_masters.scss
@@ -68,11 +68,13 @@
     border-radius: 50%;
     background-color: #ffffff;
 
-    transition-duration: 250ms;
-
     &:hover .masters-icon,
     &:focus .masters-icon {
       fill: var(--accent-color);
+      transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
+      animation-name: zoomIn;
+      animation-duration: 1500ms;
+      animation-iteration-count: 1;
     }
   }
   &-icon {
